--- a/HedgeModManager/App.xaml
+++ b/HedgeModManager/App.xaml
@@ -81,7 +81,7 @@
                         CornerRadius="0" 
                         GlassFrameThickness="0,0,0,1"
                         NonClientFrameEdges="None"
-                        ResizeBorderThickness="8"
+                        ResizeBorderThickness="1"
                         UseAeroCaptionButtons="False"/>
                 </Setter.Value>
             </Setter>
@@ -89,13 +89,8 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Window}">
                         <Grid>
-                            <Border x:Name="OutlineBorder" BorderThickness="3" Background="#FF2D2D30">
-                                <Border.Effect>
-                                    <DropShadowEffect Color="#0085BF" BlurRadius="10" ShadowDepth="0" Direction="0"/>
-                                </Border.Effect>
-                                <Border BorderThickness="1" BorderBrush="#017ACC" Panel.ZIndex="100"/>
-                            </Border>
-                            <Grid Margin="4" Background="{TemplateBinding Background}" Loaded="Window_Loaded">
+                            <Border x:Name="OutlineBorder" BorderThickness="1" Background="Transparent" IsHitTestVisible="False" BorderBrush="#017ACC" Panel.ZIndex="2"/>
+                            <Grid Margin="1" Background="{TemplateBinding Background}" Loaded="Window_Loaded" Panel.ZIndex="1">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="22"/>
                                     <RowDefinition Height="*"/>
@@ -113,7 +108,7 @@
                                         <Image Width="35" Height="25" Source="Resources/Graphics/IMG_FRAME_C.png"/>
                                     </Button>
                                 </StackPanel>
-                                <Grid Margin="4" Grid.Row="1" Background="#FF2D2D30">
+                                <Grid Margin="4" Grid.Row="1" Background="#FF2D2D30" Panel.ZIndex="1">
                                     <ContentPresenter/>
                                 </Grid>
                             </Grid>
@@ -145,7 +140,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
-                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" Opacity="{TemplateBinding Opacity}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsDefaulted" Value="true">
@@ -393,11 +388,12 @@
         <Style TargetType="{x:Type GridViewColumnHeader}">
             <Setter Property="Background" Value="#FF333337"/>
             <Setter Property="Height" Value="22"/>
+            <Setter Property="MinWidth" Value="30"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
                         <Border BorderThickness="0,0,0,1" BorderBrush="#3F3F46">
-                            <Grid Background="{TemplateBinding Background}" Margin="-2,0,0,0">
+                            <Grid Background="{TemplateBinding Background}" Margin="-2,0,0,0" MinWidth="{TemplateBinding MinWidth}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="2"/>
@@ -676,7 +672,7 @@
                             <ContentPresenter x:Name="ContentSite" IsHitTestVisible="False" Content="{TemplateBinding SelectionBoxItem}"
                                               HorizontalAlignment="Left" VerticalAlignment="Center"
                                               ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" Margin="5,0,0,0"/>
-                            <Popup x:Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" PopupAnimation="Slide">
+                            <Popup x:Name="Popup" AllowsTransparency="True" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" PopupAnimation="Fade">
                                 <Border BorderThickness="1" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}"
                                         Background="#FF2D2D30" BorderBrush="Gray" CornerRadius="2">
                                     <ScrollViewer>
