--- a/HedgeModManager/App.xaml
+++ b/HedgeModManager/App.xaml
@@ -63,13 +63,26 @@
             </Style.Triggers>
         </Style>
 
-        <!--<Style TargetType="ListView">
-            <Setter Property="Background" Value="#FF2D2D30"/>
-            <Setter Property="Foreground" Value="White"/>
-        </Style>-->
+        <Style TargetType="{x:Type ToolTip}">
+            <Setter Property="Background" Value="#3F3F3F"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToolTip}">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="4" Padding="4" BorderThickness="2" BorderBrush="Transparent">
+                            <Border.Effect>
+                                <DropShadowEffect Color="Gray" Direction="0" ShadowDepth="0" BlurRadius="2"/>
+                            </Border.Effect>
+                            <ContentPresenter Margin="4"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
         <Style TargetType="{x:Type RadioButton}">
             <Setter Property="Foreground" Value="White"/>
         </Style>
+        
         <Style x:Key="HedgeWindow" TargetType="{x:Type Window}">
             <Setter Property="Background" Value="#FF2D2D30"/>
             <Setter Property="AllowsTransparency" Value="True"/>
@@ -109,7 +122,9 @@
                                     </Button>
                                 </StackPanel>
                                 <Grid Margin="4" Grid.Row="1" Background="#FF2D2D30" Panel.ZIndex="1">
-                                    <ContentPresenter/>
+                                    <AdornerDecorator>
+                                        <ContentPresenter/>
+                                    </AdornerDecorator>
                                 </Grid>
                             </Grid>
                         </Grid>
