Add support for updating mods

--- a/HedgeModManager/Resources/GBStyleSheet.css
+++ b/HedgeModManager/Resources/GBStyleSheet.css
@@ -20,3 +20,10 @@ span.RedColor
 {
     color: #FF4E4E;
 }
+
+table 
+{
+    border-width: 1px;
+    border-style: solid;
+    border-color: darkgray;
+}
