--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -96,7 +96,7 @@
                                     <Button   x:Name="Button_CPKREDIR"      Content="Install Mod loader"            Click="UI_CPKREDIR_Click"                       Margin="10,10,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
                                     <Button   x:Name="Button_OtherLoader"   Content="Uninstall Code loader"         Click="UI_OtherLoader_Click"                    Margin="10,38,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
 
-                                    <Button   Content="Download Community Codes"                                Click="UI_Download_Codes"                       Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="40" Width="195"/>
+                                    <Button   x:Name="Button_DownloadCodes" Content="Download Community Codes"      Click="UI_Download_Codes"                       Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="40" Width="195"/>
 
                                     <StackPanel Margin="10,66,0,0">
                                         <CheckBox Content="Enable mod loader"             IsChecked="{Binding CPKREDIR.Enabled}"                    Margin="0,5,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top" />
