--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -69,7 +69,7 @@
                     <TabItem Header="Codes">
                         <Grid>
                             <GroupBox Margin="12,5,12,5">
-                                <Button   x:Name="Button_DownloadCodes" Content="Download Community Code List"      Click="UI_Download_Codes"                       Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="30"/>
+                                <Button   x:Name="Button_DownloadCodes" Content="Download Community Codes"      Click="UI_Download_Codes"                       Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="30"/>
                             </GroupBox>
                             <ListView x:Name="CodesList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="White" 
                                      Margin="12,5,12,45" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
