--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -99,12 +99,11 @@
                             </Grid.RowDefinitions>
                             <GroupBox Header="Game &amp; Mod Loader" HorizontalAlignment="Stretch" Margin="0,0,0,10" VerticalAlignment="Stretch">
                                 <Grid>
-                                    <Button   x:Name="Button_CPKREDIR"      Content="Install Mod loader"            Click="UI_CPKREDIR_Click"                       Margin="10,10,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
-                                    <Button   x:Name="Button_OtherLoader"   Content="Uninstall Code loader"         Click="UI_OtherLoader_Click"                    Margin="10,38,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
+                                    <Button   x:Name="Button_CPKREDIR"      Content="Install Mod loader"            Click="UI_CPKREDIR_Click"                       Margin="352,94,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top" Height="24" Width="164" IsEnabled="False" Visibility="Collapsed"/>
+                                    <Button   x:Name="Button_OpenMods"      Content="Open Mods Directory"           Click="UI_OpenMods_Click"                       Margin="10,8,0,0"     HorizontalAlignment="Left" VerticalAlignment="Top" Height="24" Width="164"/>
+                                    <Button   x:Name="Button_OtherLoader"   Content="Uninstall Mod loader"          Click="UI_OtherLoader_Click"                    Margin="10,37,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="24" Width="164" IsEnabled="False"/>
 
-                                    <Button   x:Name="Button_OpenMods"      Content="Open Mods Directory"           Click="UI_OpenMods_Click"                       Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="40" Width="195"/>
-
-                                    <StackPanel Margin="10,66,0,0">
+                                    <StackPanel Margin="10,0,0,0" VerticalAlignment="Bottom" Height="105">
                                         <CheckBox Content="Enable mod loader"             IsChecked="{Binding CPKREDIR.Enabled}"                    Margin="0,5,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top" />
                                         <CheckBox Content="Enable debug console"          IsChecked="{Binding CPKREDIR.EnableDebugConsole}"         Margin="0,5,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top"/>
                                         <CheckBox Content="Enable save file redirection"  IsChecked="{Binding CPKREDIR.EnableSaveFileRedirection}"  Margin="0,5,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top"/>
