Added Multiple Language Support and Chinese Translation

--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
         mc:Ignorable="d"
-        Title="About Hedge Mod Manager" Height="446.237" Width="500"  Background="#FF2D2D30"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Style="{StaticResource HedgeWindow}">
+        Title="About Hedge Mod Manager" Height="477.757" Width="500"  Background="#FF2D2D30"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Style="{StaticResource HedgeWindow}" Loaded="Window_Loaded">
+    <Window.Resources>
+        <local:LanguageConverter x:Key="LangConv" />
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="64"/>
@@ -18,8 +21,8 @@
             <Image Width="64" Height="64" Source="/Resources/Graphics/icon256.png"/>
             <Label Content="Hedge Mod Manager" Height="Auto" Width="Auto" FontSize="36"/>
         </StackPanel>
-        <Label Content="A program designed to help people easily load Hedgehog Engine mods." HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1"/>
-        <Label Content="Requires a legally owned version of one of the supported games." HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label Content="{Binding Converter={StaticResource LangConv}, ConverterParameter=A program designed to help people easily load Hedgehog Engine mods.}" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label Content="{Binding Converter={StaticResource LangConv}, ConverterParameter=Requires a legally owned version of one of the supported games.}" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Grid.Row="1"/>
         <GroupBox Header="Credits:" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2" Margin="15">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -35,6 +38,7 @@
                     <Label Content="PTKickass"/>
                     <Label Content="Slash"/>
                     <Label Content="MainMemory"/>
+                    <Label Content="JoeyLaw"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
                     <Label Content="Managing the project"/>
@@ -45,10 +49,11 @@
                     <Label Content="Cheat codes"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="mod-loader-common"/>
+                    <Label Content="Chinese Translation"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
-        <Button Content="Close" HorizontalAlignment="Left" Margin="408,0,0,0" VerticalAlignment="Top" Width="75" Click="UI_Close_Click" Height="23" Grid.Row="3"/>
+        <Button Content="{Binding Converter={StaticResource LangConv}, ConverterParameter=Close}" HorizontalAlignment="Left" Margin="408,0,0,0" VerticalAlignment="Top" Width="75" Click="UI_Close_Click" Height="23" Grid.Row="3"/>
         <Button Content="GitHub" HorizontalAlignment="Left" Margin="328,0,0,0" VerticalAlignment="Top" Width="75" Click="UI_GitHub_Click" Height="23" Grid.Row="3"/>
     </Grid>
 </Window>
